feat: support seats under maintenance
